deployment/prod/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-agentscape-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-agentscape-backend
  template:
    metadata:
      labels:
        app: prod-agentscape-backend
    spec:
      containers:
        - name: prod-agentscape-backend
          image: mock_string_substituted_by_azure_pipeline
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-data
              mountPath: /opt/data
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: prod-agentscape-backend-storage-pvc
      imagePullSecrets:
        - name: acrregistry-secret
