deployment/prod/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-agentscape-backend-service
spec:
  selector:
    app: prod-agentscape-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
